RESOLVED FIXED91033
pagesPerView param is misnamed for WKPageSetPageLength()
https://bugs.webkit.org/show_bug.cgi?id=91033
Summary pagesPerView param is misnamed for WKPageSetPageLength()
Simon Fraser (smfr)
Reported 2012-07-11 17:00:31 PDT
WK_EXPORT void WKPageSetPageLength(WKPageRef page, double pagesPerView); pagesPerView is really a page width.
Attachments
Patch (1.76 KB, patch)
2012-07-11 17:22 PDT, Simon Fraser (smfr)
simon.fraser: review+
Simon Fraser (smfr)
Comment 1 2012-07-11 17:22:44 PDT
Simon Fraser (smfr)
Comment 2 2012-07-11 17:23:02 PDT
Comment on attachment 151820 [details] Patch Dan rubber-stamped this on irc.
Simon Fraser (smfr)
Comment 3 2012-07-11 17:23:54 PDT
Note You need to log in before you can comment on or make changes to this bug.