pagesPerView param is misnamed for WKPageSetPageLength() https://bugs.webkit.org/show_bug.cgi?id=91033

Rubber-stamped by Dan Bernstein.

The name of the second parameter to WKPageSetPageLength(),
'pagesPerView', was confusing; it's a page size (normally width)
in pixels.

* UIProcess/API/C/WKPagePrivate.h:

Canonical link: https://commits.webkit.org/108868@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122393 268f45cc-cd09-0410-ab3c-d52691b4dbfc